--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Roboto+Mono:wght@400;700&display=swap");
+@import url('@tldraw/tldraw/tldraw.css');
+
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
